--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
   scrolling="no"
   style="border: none; overflow: hidden; margin-top: 30px;"></iframe>
 
-    <!-- Visitor Counter -->
+<!-- Retro Visitor Counter -->
 <div style="text-align: center; margin-top: 30px;">
-  <script type="text/javascript" src="https://www.freevisitorcounters.com/auth.php?id=80fb75231723d851b738056a790f2e2a38409e3c"></script>
-  <noscript><a href="https://www.freevisitorcounters.com" target="_blank">Free Visitor Counter</a></noscript>
+  <img src="https://www.hitwebcounter.com/counter/counter.php?page=11330429&style=0007&nbdigits=5&type=page&initCount=0" 
+       title="Visitor Counter" 
+       alt="visitor counter" 
+       style="width: 80px; max-width: 100%;">
 </div>
     
   <div class="w-layout-blockcontainer w-container"><img src="images/lostsectiongif.gif" loading="lazy" width="200" alt="" class="image-6"/></div></div></div>
