--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   style="border: none; overflow: hidden; margin-top: 30px;"></iframe>
 
 <!-- Retro Visitor Counter -->
-<div style="text-align: center; margin-top: 30px;">
+<div style="margin-top: 20px; margin-left: 40px;">
   <img src="https://www.hitwebcounter.com/counter/counter.php?page=11330429&style=0036&nbdigits=5&type=page&initCount=0" 
        title="Visitor Counter" 
        alt="visitor counter" 
